# navier-dev

./: README.md
Navier double layer operator/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  double_layer_navier.i  double_layer_navier.py  double_layer_navierPYTHON_wrap.cxx  double_layer_navierPYTHON_wrap.h  install_manifest.txt  navier_3d_double_layer_boundary_operator.hpp  navier_3d_double_layer_boundary_operator.hpp~  navier_3d_double_layer_boundary_operator_integrand_functor.hpp  navier_3d_double_layer_boundary_operator_integrand_functor.hpp~  navier_3d_double_layer_potential_kernel_functor.hpp  navier_3d_double_layer_potential_kernel_functor.hpp~
Navier single layer operator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  navier_3d_single_layer_boundary_operator.hpp  navier_3d_single_layer_boundary_operator.hpp~  navier_3d_single_layer_boundary_operator_integrand_functor.hpp  navier_3d_single_layer_boundary_operator_integrand_functor.hpp~  navier_3d_single_layer_potential_kernel_functor.hpp  navier_3d_single_layer_potential_kernel_functor.hpp~  single_layer_navier.i~  single_layer_navier.py  single_layer_navierPYTHON_wrap.cxx  single_layer_navierPYTHON_wrap.h
Square on half-space/: dirichlet_data.vtu  mesh.geo  neumann_data.vtu  square.geo  square.geo~  square.msh  square_1m.geo  square_1m.geo~  square_1m.msh  square_300mm.geo  square_300mm.msh  square_500mm.geo  square_500mm.msh  square_on_half_space.py  square_on_half_space.py~  square_on_half_space_mixed_bc_example.py~  square_r10_b1_250mm.msh  square_r50_b1_500mm.geo  square_r50_b1_500mm.geo~  square_r50_b1_500mm.msh
